# 2023_1_C--

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.builder  Dockerfile.server  Dockerfile.tcprouter  Makefile  README.md  ToOleg.txt  docker-compose.yml  docker_up.sh
DB/: CMakeLists.txt  IClientDBManager.hpp  IDBManager.hpp  IRoomDBManager.hpp
DB/include/: Client.hpp  ClientDBManager.hpp  DBManager.hpp  IClientDBManager.hpp  IDBManager.hpp  IRoomDBManager.hpp  Message.hpp  Room.hpp  RoomDBManager.hpp
DB/src/: Client.cpp  ClientDBManager.cpp  DBManager.cpp  Message.cpp  Room.cpp  RoomDBManager.cpp
TCPRouter/: CMakeLists.txt  config.ini  main.cpp
TCPRouter/include/: TCPMessageRouter.hpp
TCPRouter/src/: TCPMessageRouter.cpp
client/: CMakeLists.txt
client/Account/include/: AccountData.hpp  AccountNetwork.hpp  AccountReplyHandler.hpp  AccountSwitcher.hpp  AccountUseCase.hpp  Errors.hpp  Forms.hpp  IAccountNetwork.hpp  IAccountReplyHandler.hpp  IAccountSwitcher.hpp  IAccountUi.hpp  IAccountUseCase.hpp  IForms.hpp  ILoginPage.hpp  ILoginUi.hpp  ISignupUi.hpp
client/Account/src/: AccountNetwork.cpp  AccountReplyHandler.cpp  AccountSwitcher.cpp  AccountUseCase.cpp  Forms.cpp
client/Account/tests/: CMakeLists.txt
client/AppController/: AppController.cpp  AppController.hpp
client/Controller/include/: IWidgetController.hpp
client/DataStructures/: LoginData.hpp  Message.hpp  RoomInfo.hpp  SignupData.hpp  UserData.hpp  UserInfo.hpp
client/GUI/LoginPage/: ILoginPage.hpp  LoginPage.cpp  LoginPage.hpp  LoginPage.ui
client/GUI/MCLineEdit/: MCLineEdit.cpp  mclineedit.h
client/GUI/MainPage/: IMainPage.hpp  MainPage.cpp  MainPage.hpp  MainPage.ui
client/GUI/MainWindow/: IWidgetController.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
client/GUI/RoomCreationPage/: IRoomCreationPage.hpp  RoomCreationPage.cpp  RoomCreationPage.hpp  RoomCreationPage.ui
client/GUI/RoomPage/: IRoomPage.hpp  RoomPage.cpp  RoomPage.hpp  RoomPage.ui
client/GUI/RoomSearchPage/: RoomSearchPage.cpp  RoomSearchPage.hpp  RoomSearchPage.ui
client/GUI/SignupPage/: ISignupPage.hpp  SignupPage.ui
client/Network/NetworkManager/: INetworkManager.hpp  NetworkManager.cpp  NetworkManager.hpp
client/Network/Request/: IRequest.hpp  Request.hpp
client/Network/RequestCreator/: HttpRequestCreator.hpp  IHttpRequestCreator.hpp
client/Network/Response/: IResponse.hpp  Response.hpp
client/Network/TcpConnection/: ITcpConnection.hpp  TcpConnection.cpp  TcpConnection.hpp
client/Network/include/: Communication.hpp  Deserializer.hpp  IClientSerializer.hpp  ICommunication.hpp  IDeserializer.hpp  INetworkManager.hpp  IRoomSerializer.hpp  ISerializer.hpp  ITcpConnection.hpp  NetworkManager.hpp  SerializationKeys.hpp  Serializer.hpp  TcpConnection.hpp
client/Network/src/: Communication.cpp  Deserializer.cpp  NetworkManager.cpp  Serializer.cpp  TcpConnection.cpp
client/Room/include/: IMainPage.hpp  IMainPageUi.hpp  IRoomNetwork.hpp  IRoomPage.hpp  IRoomPageUi.hpp  IRoomReplyHandler.hpp  IRoomSwitcher.hpp  IRoomUseCase.hpp  IUserInfoUi.hpp  RoomData.hpp  RoomNetwork.hpp  RoomReplyHandler.hpp  RoomSwitcher.hpp  RoomUseCase.hpp
client/Room/src/: RoomNetwork.cpp  RoomReplyHandler.cpp  RoomSwitcher.cpp  RoomUseCase.cpp
client/etc/: config.ini  users.txt  wordlist.txt
client/include/: AppController.hpp  ApplicationUi.hpp  IWidgetController.hpp  LoginPage.hpp  MCLineEdit.hpp  MainPage.hpp  MainWindow.hpp  RoomCreationPage.hpp  RoomPage.hpp  RoomSearchPage.hpp  SignupPage.hpp
client/lib/account/: CMakeLists.txt
client/lib/room/: CMakeLists.txt
client/src/: AppController.cpp  AppController.hpp  ApplicationUi.cpp  LoginPage.cpp  LoginPage.ui  MCLineEdit.cpp  MainPage.cpp  MainPage.ui  MainWindow.cpp  MainWindow.ui  RoomCreationPage.cpp  RoomCreationPage.ui  RoomPage.cpp  RoomPage.ui  RoomSearchPage.cpp  SignupPage.cpp  SignupPage.ui  main.cpp
lib/DB/: CMakeLists.txt
lib/DB/include/: IRoomDBManager.hpp  roomdbmanager.hpp
lib/DB/src/: ClientDBManager.cpp  DBManager.cpp  RoomDBManager.cpp  clientdbmanager.cpp  dbmanager.cpp  roomdbmanager.cpp
server/: CMakeLists.txt  config.ini  main.cpp
server/Adapters/: HttpRequestToIHttpRequestAdapter.cpp  HttpRequestToIHttpRequestAdapter.hpp  HttpResponseToIHttpResponseAdapter.cpp  HttpResponseToIHttpResponseAdapter.hpp  RequestMapperAdapter.cpp  RequestMapperAdapter.hpp  readme.txt
server/DbInterface/: DBManager.cpp  DBManager.hpp  IClientDBManager.hpp  IDBManager.hpp  IRoomDBManager.hpp  readme.txt
server/HttpControllers/CreateRoomController/: CreateController.cpp  CreateController.hpp
server/HttpControllers/DeleteRoomController/: DeleteRoomController.hpp
server/HttpControllers/GetNewMessageController/: GetNewMessageController.cpp  GetNewMessageController.hpp
server/HttpControllers/GetRoomHistoryController/: GetRoomHistoryController.cpp  GetRoomHistoryController.hpp
server/HttpControllers/JoinRoomController/: JoinRoomController.cpp  JoinRoomController.hpp
server/HttpControllers/LoginController/: LoginController.cpp  LoginController.hpp
server/HttpControllers/RefreshRoomController/: RefreshRoomController.cpp  RefreshRoomController.hpp
server/HttpControllers/RegisterController/: RegisterController.cpp  RegisterController.hpp
server/HttpControllers/SearchRoomController/: SearchRoomController.cpp  SearchRoomController.hpp
server/HttpControllers/SendMessageController/: SendMessageController.cpp  (+1 more)
server/HttpHandlers/: HttpRequestHandler.hpp  HttpRequestMapper.cpp  HttpRequestMapper.hpp  IHttpRequestHandler.hpp
server/HttpListener/: IHttpListener.hpp
server/HttpRequest/: IHttpRequest.hpp
server/HttpResponse/: HttpResponse.hpp  IHttpResponse.hpp
server/TCPMessageReciver/: TCPMessageReciver.cpp  TCPMessageReciver.hpp
server/include/: IClientDbManager.hpp  IDbManager.hpp  IHttpListener.hpp  IHttpRequest.hpp  IHttpRequestHandler.hpp  IRoomDbManager.hpp
tests/: CMakeLists.txt  TestClientDBManager.hpp  TestDBManager.hpp  TestRoomDBManager.hpp  test.cpp
tests/server/: CMakeLists.txt  summary.txt  tests.cpp
(+106 files in other folders)
